# la_bot

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: linters.yml  tests.yml
la_bot/: cli.py  notifications.py  settings.py  shared_state.py  stats.py  telegram_client.py  wait_utils.py
la_bot/captcha/: anti_captcha_provider.py  game_specific.py  image_with_numbers.py  resolvers.py  simple_emoji.py  simple_grammar.py  simple_math.py
la_bot/game/: buttons.py  parsers.py
la_bot/game/action/: __init__.py  common.py
la_bot/game/state/: __init__.py  common.py
la_bot/plugins/: manager.py
la_bot/trainer/: __init__.py  event_logging.py  farming.py  loop.py  spam_messages.py
la_bot/trainer/handlers/: common.py  farming.py
tests/: conftest.py
